[project]
name = "wet-snow-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bottleneck>=1.5.0",
    "pandas>=2.3.2",
    "tqdm>=4.67.1",
    "xarray>=2025.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wet_snow_tracker"]
